openshift/load-balancer/hsm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hsm-aware-poc
  labels:
    app: hsm-poc
spec:
  replicas: 6
  selector:
    matchLabels:
      app: hsm-poc
  template:
    metadata:
      labels:
        app: hsm-poc
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: hsm-poc

      volumes:
        - name: shared-config-vol
          emptyDir: {}

      containers:
        - name: my-app-simulator
          image: registry.access.redhat.com/ubi8/ubi-minimal:latest
          
          command: ["/bin/sh", "-c"]
          args:
            - |
              if [ -f /config/hsm.env ]; then
                source /config/hsm.env
              else
                echo "Erreur: Fichier de config HSM introuvable !"
                exit 1
              fi
              
              echo "--- Simulateur d'application démarré ---"
              echo "Zone détectée via Downward API: $NODE_ZONE"

              while true
              do
                echo "$(date +%T) | MON_ENV_HSM: $HSM_URLS"
                sleep 10
              done
          
          volumeMounts:
            - name: shared-config-vol
              mountPath: /config
