openshift/load-balancer/nlb-private-zone-1.yaml
---
# Create a namespace
apiVersion: v1
kind: Namespace
metadata:
  name: nlb-private
  labels:
    environment: production

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nlb-pod
  namespace: nlb-private
  labels:
    app: test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: mendhak-container
        # image: openshift/hello-openshift
        image: mendhak/http-https-echo:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 384Mi
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: private-nlb-eu-de-1
  namespace: nlb-private
  annotations:
    service.kubernetes.io/ibm-load-balancer-cloud-provider-vpc-lb-name: "my-private-nlb-1"
    service.kubernetes.io/ibm-load-balancer-cloud-provider-enable-features: "nlb"
    service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type: "private"
    # Private NLB require the annotation service.kubernetes.io/ibm-load-balancer-cloud-provider-vpc-subnets
    service.kubernetes.io/ibm-load-balancer-cloud-provider-vpc-subnets: "02b7-353dd35d-490a-4aee-804f-2254013c8774"
    # Only select the workers from the zone selected (optional) - Impact the members in the LB Back-end Pools
    service.kubernetes.io/ibm-load-balancer-cloud-provider-vpc-node-selector: "ibm-cloud.kubernetes.io/zone=eu-de-1"
    #optional service.kubernetes.io/ibm-load-balancer-cloud-provider-zone: "eu-de-1"
    #optional service.kubernetes.io/ibm-load-balancer-cloud-provider-vpc-health-check-udp: "<tcp_port"
  labels:
    app: nlb-pod
spec:
  type: LoadBalancer
  # Specify Cluster (Default) or Local (to preserve the source IP address of client requests).
  externalTrafficPolicy: Cluster
  selector:
    app: test
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
