openshift/load-balancer/hello-route.yaml
---
# Application to deploy
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  # namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
        tier: frontend
    spec:
      containers:
      - name: hello
        image: openshift/hello-openshift
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 250m     # 250 millicores = 1/4 core
            memory: 128Mi # 128 MB
          limits:
            cpu: 500m
            memory: 384Mi
        livenessProbe:
          httpGet:
            path: /healthcheck/
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
          failureThreshold: 2        
        # envFrom:
        # - secretRef:
        #     name: database-credentials

---
apiVersion: v1
kind: Service
metadata:
 annotations:
  service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type: public
  # service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type: private
 labels:
  app: hello
  tier: frontend
 name: hello-service
#  namespace: default
spec:
  type: ClusterIP
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello
    tier: frontend

---
# Create a Route
# oc create route edge --service=hello-service
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-route
  # namespace: default
  labels:
    app: hello
    tier: frontend
spec:
  host: icn-roks-7d23ce9b99cc281f754f713c0a27f19a-0000.eu-de.containers.appdomain.cloud
  secretName: icn-roks-7d23ce9b99cc281f754f713c0a27f19a-0000
  to:
    kind: Service
    name: hello-service
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
  wildcardPolicy: None
